--- a/app/src/main/res/layout/item_content_home.xml
+++ b/app/src/main/res/layout/item_content_home.xml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="200dp"
+    android:background="@color/abc_theme_black_7f">
 
-    <TextView
-        android:id="@+id/tv_home_title"
+    <ImageView
+        android:id="@+id/iv_home_img"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:background="@color/abc_white"/>
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_home_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="我是标题"
+            android:textColor="@color/abc_white"
+            android:textSize="@dimen/text_size_01" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="#科普 / 09-41"
+            android:textColor="@color/abc_white"
+            android:textSize="@dimen/text_size_03" />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
