--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="text_tab_normal">#333333</color>
     <color name="text_tab_active">#000000</color>
+    <color name="image_place_normal">#f2f2f2</color>
 </resources>
