--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="tab_bar_height">45dp</dimen>
+
+    <dimen name="text_size_01">18sp</dimen>
+    <dimen name="text_size_02">16sp</dimen>
+    <dimen name="text_size_03">14sp</dimen>
 </resources>
