update splash activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="text_tab_normal">#333333</color>
     <color name="text_tab_active">#000000</color>
     <color name="image_place_normal">#f2f2f2</color>
+
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
