--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="text_size_01">18sp</dimen>
     <dimen name="text_size_02">16sp</dimen>
     <dimen name="text_size_03">14sp</dimen>
+
+    <dimen name="margin_bottom">50dp</dimen>
 </resources>
