--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/splash_image_view"
+        android:id="@+id/iv_splash_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
