update home layout

--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/itemView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:clipToPadding="false"
-        android:padding="4dp"/>
+        android:background="@color/colorAccent"/>
+
+    <TextView
+        android:id="@+id/footView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/abc_white"
+        android:gravity="center"
+        android:text="我是footview"/>
 </LinearLayout>
