--- a/app/src/main/res/layout/item_content_home.xml
+++ b/app/src/main/res/layout/item_content_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:background="@color/abc_theme_black_7f">
@@ -8,7 +9,7 @@
         android:id="@+id/iv_home_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +26,7 @@
             android:singleLine="true"
             android:text="我是标题"
             android:textColor="@color/abc_white"
-            android:textSize="@dimen/text_size_01" />
+            android:textSize="@dimen/text_size_01"/>
 
         <TextView
             android:id="@+id/tv_category"
@@ -36,7 +37,7 @@
             android:singleLine="true"
             android:text="#科普 / 09-41"
             android:textColor="@color/abc_white"
-            android:textSize="@dimen/text_size_03" />
+            android:textSize="@dimen/text_size_03"/>
 
     </LinearLayout>
 
