--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,9 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="0.5dp"
         android:background="#dedede"
-        android:paddingBottom="@dimen/tab_bar_height"/>
+        android:layout_above="@id/navigateTabBar"/>
 
     <com.meikoz.core.ui.TabStripView
         android:id="@+id/navigateTabBar"
