--- a/app/src/main/res/layout/item_content_home.xml
+++ b/app/src/main/res/layout/item_content_home.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="300dp"
     android:layout_height="200dp"
-    android:background="@color/abc_theme_black_7f">
+    android:background="@color/image_place_normal">
 
     <ImageView
         android:id="@+id/iv_home_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +25,7 @@
             android:singleLine="true"
             android:text="我是标题"
             android:textColor="@color/abc_white"
-            android:textSize="@dimen/text_size_01"/>
+            android:textSize="@dimen/text_size_01" />
 
         <TextView
             android:id="@+id/tv_category"
@@ -37,7 +36,7 @@
             android:singleLine="true"
             android:text="#科普 / 09-41"
             android:textColor="@color/abc_white"
-            android:textSize="@dimen/text_size_03"/>
+            android:textSize="@dimen/text_size_03" />
 
     </LinearLayout>
 
