--- a/app/src/main/res/layout/item_content_home.xml
+++ b/app/src/main/res/layout/item_content_home.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/image_place_normal">
+    android:background="@color/abc_theme_black_7f">
 
     <ImageView
         android:id="@+id/iv_home_img"
